--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
+    <title>𝙲𝚊𝚕𝚌𝚞𝚕𝚊𝚍𝚘𝚛𝚊</title>
     <style>
         *{
             margin: 0;
             padding: 0;
         }
         .fundo{
-            background-image: linear-gradient(150deg,red,
+            background-image: linear-gradient(150deg,#000056,
                                               crimson);
             height: 100vh;
-            color: #fff;
+            color: #000056;
             font-family: Arial, Helvetica, sans-seri;
             text-align: center;
         }
