--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
             padding: 0;
         }
         .fundo{
-            background-image: linear-gradient(150deg,#000056,
-                                              crimson);
+            background-color: #000056;
             height: 100vh;
-            color: #000056;
+            color: #fff;
             font-family: Arial, Helvetica, sans-seri;
             text-align: center;
         }
