--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 </head>
 <body>
     <div class="fundo">
-        <h1>Calculadora 2.0</h1>
+        <h1>𝙲𝚊𝚕𝚌𝚞𝚕𝚊𝚍𝚘𝚛𝚊 2.0</h1>
         <div class="calculadora">
-            <h1>Calculadora</h1>
+            <h1>𝙲𝚊𝚕𝚌𝚞𝚕𝚊𝚍𝚘𝚛𝚊</h1>
             <p id="resultado"></p>
             <table>
                 <tr>
