--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
-            border-radius: 15px;
-            padding: 15px;
+            border-radius: 20px;
+            padding: 20px;
         }
-        .botao{
-            width: 50px;
-            height: 50px;
-            font-size: 25px;
+        .botao{          
+            width: 60px;
+            height: 60px;
+            font-size: 46px;
             cursor: pointer;
-            margin: 3px;
+            margin: 8px;
             background-color: rgb(31,31,31);
-            border: 15xp;
+            border: k;
             border-radius: 15px;
             color: #fff;
         }
@@ -41,20 +41,20 @@
         }
         #resultado{
             background-color: white;
-            width: 207px;
+            width: 250px;
             height: 30px;
             margin: 5px;
-            font-size: 25px;
+            font-size: 30px;
             border-radius: 15px;
             color: black;
             text-align: right;
-            padding: 5px;
+            padding: 20px;
         }
     </style>
 </head>
 <body>
     <div class="fundo">
-        <h1>𝙲𝚊𝚕𝚌𝚞𝚕𝚊𝚍𝚘𝚛𝚊 2.0</h1>
+        <h1>𝐶𝑎𝑙𝑐𝑢𝑙𝑎𝑑𝑜𝑟𝑎 3.0 (𝙱𝚎𝚝𝚊)</h1>
         <div class="calculadora">
             <h1>𝙲𝚊𝚕𝚌𝚞𝚕𝚊𝚍𝚘𝚛𝚊</h1>
             <p id="resultado"></p>
@@ -63,7 +63,7 @@
                     <td><button class="botao" onclick="clean()">C</button></td>
                     <td><button class="botao" onclick="back()"><</button></td>
                     <td><button class="botao" onclick="insert('/')">/</button></td>
-                    <td><button class="botao" onclick="insert('*')">X</button></td>
+                    <td><button class="botao" onclick="insert('*')">×</button></td>
                 </tr>
                 <tr>
                     <td><button class="botao" onclick="insert('7')">7</button></td>
@@ -114,9 +114,9 @@
             }
             else
             {
-                document.getElementById('resultado').innerHTML = "Nada..."
+                document.getElementById('resultado').innerHTML = "Nadinha..."
             }
         }
     </script>
 </body>
-                                                                                </html>
+</html>
