--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <td><button class="botao" onclick="clean()">𝐂</button></td>
                     <td><button class="botao" onclick="back()">⌫</button></td>
                     <td><button class="botao" onclick="insert('/')">➗</button></td>
-                    <td><button class="botao" onclick="insert('*')">✘</button></td>
+                    <td><button class="botao" onclick="insert('*')">✖️</button></td>
                 </tr>
                 <tr>
                     <td><button class="botao" onclick="insert('7')">7</button></td>
@@ -81,7 +81,7 @@
                     <td><button class="botao" onclick="insert('1')">1</button></td>
                     <td><button class="botao" onclick="insert('2')">2</button></td>
                     <td><button class="botao" onclick="insert('3')">3</button></td>
-                    <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">⚌</button></td>
+                    <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">🟰</button></td>
                 </tr>
                 <tr>
                     <td colspan="2"><button class="botao" style="width: 106px;" onclick="insert('0')">0</button></td>
